# capsule-cli

./: Capsule.toml  Cargo.toml  README.md
src/: lib.rs
