[package]
name = "astrid-capsule-cli"
version = "0.1.1"
edition = "2024"
license = "MIT OR Apache-2.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
astrid-sdk = { version = "0.5.3", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[patch.crates-io]
astrid-sdk = { path = "../../sdk-rust/astrid-sdk" }
astrid-sdk-macros = { path = "../../sdk-rust/astrid-sdk-macros" }
astrid-sys = { path = "../../sdk-rust/astrid-sys" }

[profile.release]
codegen-units = 1
lto = true
strip = true
